<resources>
  <string name="app_name">Hillfort</string>
  <string name="hint_placemarkTitle">Site Title</string>
  <string name="button_addPlacemark">Add Site</string>
  <string name="hint_placemarkDescription">Description </string>
  <string name="menu_addPlacemark">Add</string>
  <string name="menu_cancelPlacemark">Cancel</string>
  <string name="enter_placemark_title"> Please enter a Site Title </string>
  <string name="save_placemark"> Save Site </string>
  <string name="button_addImage"> Add Image </string>
  <string name="select_placemark_image">Select site image</string>
  <string name="change_placemark_image">Change site image</string>
  <string name="button_location">Set Location</string>
  <string name="title_activity_map">Map</string>
  <string name="menu_deletePlacemark">Delete</string>
  <string name="placemarkTitle">Site Title</string>
  <string name="placemarkDescription">Site Description</string>
  <string name="placemarkPicture">Site Picture</string>
  <string name="menu_savePlacemark">Save</string>
  <string name="title_activity_placemark_list">Sites</string>
  <string name="title_activity_placemark">Site</string>
  <string name="title_activity_location">Site</string>
  <string name="menu_showMap">Show Map</string>
  <string name="menu_logout">Logout</string>
  <string name="settings">Settings</string>
  <string name="enter_new_email">Enter new Emailadress</string>
  <string name="enter_new_password">Enter new Password</string>
  <string name="numberofsights">Number of sites: </string>
  <string name="visited">Visited?</string>
  <string name="Email_address">E-Mail address: </string>
  <string name="Password">Password: </string>
  <string name="numberofvisited">Number of visited: </string>
  <string name="notvisited">not visited</string>
  <string name="putnoteshere">Put notes here</string>
  <string name="visiteddate">Visited on: </string>
  <string name="up">Up</string>
  <string name="myrating">My Rating: </string>
  <string name="favorite">Favorite </string>
  <string name="allsites">all Sites </string>
  <string name="btn_addimagefromcamera">Add Image from Camera</string>
  <string name="searchfor">Search for: </string>
  <string name="search">Search</string>
  <string name="searchforwords">Search for words in sites here </string>
  <string name="shareinfo">Share Site Information</string>
  <string name="showallimages">Show all images</string>
  <string name="emailadresssharing">Put email adress to share information here</string>
  <string name="deleteall">Delete all images</string>
  <string name="selectfromcamera">Select image from camera</string>
  <string name="navigateto">Navigate to Hillfort</string>
  <string name="couldnotsendemail">Could not send E-Mail</string>
  <string name="samelocation">Can not Navigate to Site, because Site is the same as the current location</string>
  <string name="hillforts">Hillforts</string>
</resources>
