<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_delete"
        android:title="@string/menu_deletePlacemark"
        app:showAsAction="never"/>
    <item
        android:id="@+id/item_save"
        android:title="@string/menu_savePlacemark"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_cancel"
        android:title="@string/menu_cancelPlacemark"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_favorites"
        android:title="@string/favorite"
        app:showAsAction="never"/>

    <item
        android:id="@+id/item_search"
        android:title="@string/search"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_navigateto"
        android:title="@string/navigateto"
        app:showAsAction="never" />


</menu>