<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.wit.placemark.views.placemark.PlacemarkView">

  <ScrollView
      android:id="@+id/scroll_view"
      android:layout_width="match_parent"
      android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="0dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

          <androidx.appcompat.widget.Toolbar
              android:id="@+id/toolbarAdd"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:titleTextColor="@color/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/appBarLayout"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="-33dp"
            android:layout_marginBottom="35dp">


          <androidx.recyclerview.widget.RecyclerView
              android:id="@+id/recyclerView2"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginTop="100dp"
              android:layout_marginBottom="50dp"
              app:layout_constraintBottom_toTopOf="@+id/mapView"
              app:layout_constraintTop_toBottomOf="@+id/chooseImage" />

          <Button
              android:id="@+id/chooseImage"
              android:layout_width="386dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="13dp"
              android:layout_marginTop="200dp"
              android:layout_marginEnd="19dp"
              android:background="@color/colorAccent"
              android:paddingTop="8dp"
              android:paddingBottom="8dp"
              android:text="@string/button_addImage"
              android:textColor="@color/colorPrimary"
              android:textSize="16sp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.142"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/visiteddate" />

          <Button
              android:id="@+id/deleteAllimages"
              android:layout_width="386dp"
              android:layout_height="wrap_content"
              android:layout_marginStart="13dp"
              android:layout_marginTop="272dp"
              android:layout_marginEnd="19dp"
              android:background="@color/colorAccent"
              android:paddingTop="8dp"
              android:paddingBottom="8dp"
              android:text="@string/deleteall"
              android:textColor="@color/colorPrimary"
              android:textSize="16sp"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.142"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/visiteddate" />

          <EditText
              android:id="@+id/description"
              android:layout_width="250dp"
              android:layout_height="55dp"
              android:layout_marginStart="16dp"
              android:layout_marginTop="12dp"
              android:hint="@string/hint_placemarkDescription"
              android:inputType="text"
              android:maxLength="25"
              android:maxLines="1"
              android:padding="8dp"
              android:textColor="@color/colorPrimaryDark"
              android:textSize="14sp"
              app:layout_constraintEnd_toStartOf="@+id/lat"
              app:layout_constraintHorizontal_bias="0.0"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/placemarkTitle" />

          <RatingBar
              android:id="@+id/simpleRatingBar"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginBottom="16dp"
              app:layout_constraintBottom_toTopOf="@+id/additionalnotes"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.912"
              app:layout_constraintStart_toStartOf="parent" />

          <EditText
              android:id="@+id/additionalnotes"
              android:layout_width="386dp"
              android:layout_height="102dp"
              android:layout_marginStart="5dp"
              android:layout_marginTop="100dp"
              android:layout_marginEnd="5dp"
              android:layout_marginBottom="20dp"
              android:hint="@string/putnoteshere"
              app:layout_constraintBottom_toTopOf="@+id/chooseImage"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.466"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/visiteddate"
              app:layout_constraintVertical_bias="1.0" />

          <EditText
              android:id="@+id/emailadressshare"
              android:layout_width="384dp"
              android:layout_height="65dp"
              android:layout_marginStart="16dp"
              android:layout_marginTop="30dp"
              android:layout_marginEnd="16dp"
              android:layout_marginBottom="32dp"
              android:hint="@string/emailadresssharing"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/shareinfo"
              app:layout_constraintVertical_bias="0.0" />

          <EditText
              android:id="@+id/placemarkTitle"
              android:layout_width="250dp"
              android:layout_height="55dp"
              android:layout_marginStart="16dp"
              android:layout_marginTop="72dp"
              android:autofillHints=""
              android:hint="@string/hint_placemarkTitle"
              android:inputType="text"
              android:maxLength="25"
              android:maxLines="1"
              android:padding="8dp"
              android:textColor="@color/colorPrimaryDark"
              android:textSize="14sp"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toTopOf="parent">

            <requestFocus />
          </EditText>

          <TextView
              android:id="@+id/lat"
              android:layout_width="95dp"
              android:layout_height="19dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="16dp"
              android:text="00.000000"
              android:textAlignment="center"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/textView" />

          <TextView
              android:id="@+id/lng"
              android:layout_width="92dp"
              android:layout_height="19dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="16dp"
              android:text="00.000000"
              android:textAlignment="center"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/lat" />


          <com.google.android.gms.maps.MapView
              android:id="@+id/mapView"
              android:layout_width="405dp"
              android:layout_height="244dp"
              android:layout_marginStart="16dp"
              android:layout_marginEnd="16dp"
              android:layout_marginBottom="8dp"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.576"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/deleteAllimages" />

          <TextView
              android:id="@+id/textView"
              android:layout_width="90dp"
              android:layout_height="24dp"
              android:layout_marginStart="40dp"
              android:layout_marginTop="80dp"
              android:layout_marginEnd="16dp"
              android:text="Location"
              android:textAlignment="center"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.103"
              app:layout_constraintStart_toEndOf="@+id/placemarkTitle"
              app:layout_constraintTop_toTopOf="parent" />

          <CheckBox
              android:id="@+id/checkBox"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="44dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="16dp"
              android:text="@string/visited"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toEndOf="@+id/description"
              app:layout_constraintTop_toBottomOf="@+id/lng" />

          <CheckBox
              android:id="@+id/favorite"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginStart="44dp"
              android:layout_marginTop="52dp"
              android:layout_marginEnd="16dp"
              android:text="@string/favorite"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="1.0"
              app:layout_constraintStart_toEndOf="@+id/description"
              app:layout_constraintTop_toBottomOf="@+id/lng" />

          <TextView
              android:id="@+id/visiteddate"
              android:layout_width="196dp"
              android:layout_height="36dp"
              android:layout_marginTop="10dp"
              android:layout_marginEnd="16dp"
              android:text="@string/notvisited"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/favorite" />

          <TextView
              android:id="@+id/stringvisiteddate"
              android:layout_width="149dp"
              android:layout_height="36dp"
              android:text="@string/visiteddate"
              app:layout_constraintBottom_toTopOf="@+id/additionalnotes"
              app:layout_constraintEnd_toStartOf="@+id/visiteddate"
              app:layout_constraintHorizontal_bias="0.24"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/description"
              app:layout_constraintVertical_bias="0.35" />

          <TextView
              android:id="@+id/Rating"
              android:layout_width="109dp"
              android:layout_height="41dp"
              android:text="@string/myrating"
              app:layout_constraintBottom_toTopOf="@+id/additionalnotes"
              app:layout_constraintEnd_toStartOf="@+id/visiteddate"
              app:layout_constraintHorizontal_bias="0.177"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/description"
              app:layout_constraintVertical_bias="0.829" />

          <Button
              android:id="@+id/shareinfo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginTop="8dp"
              android:layout_marginBottom="20dp"
              android:text="@string/shareinfo"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintHorizontal_bias="0.511"
              app:layout_constraintStart_toStartOf="parent"
              app:layout_constraintTop_toBottomOf="@+id/mapView"
              app:layout_constraintVertical_bias="0.103" />


        </androidx.constraintlayout.widget.ConstraintLayout>


      </RelativeLayout>

    </LinearLayout>
  </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>